# routes/quiz/quiz.js
@@ -111,21 +111,18 @@ router.post("/result", async (req, res) => {
   }
 });
 
-router.get("/feedback", async (req, res) => {
+router.get("/feedback/:category", async (req, res) => {
   //환자에게 퀴즈에 대한 피드백을 보여주는 API
-  //filter를 이용해서 틀린 문제만 가져온다.
   try {
+    const category = req.params.category;
     const token = req.header("Authorization").split(" ")[1];
     const user_data = utils.parseJWTPayload(token);
     let user = await User.findOne({uid: user_data.user.uid});
     if(user != undefined){
-      var feedback = new Array();
-      for(var i=0; i<user.quizResults.length; i++){
-        feedback.push(user.quizResults[i].results.filter((quiz) => quiz.result === false));
-      }
+      let feedback = user.quizResults.filter((quiz) => quiz.category === category);
       return res.status(200).json({
           success: true,
-          feedback: feedback,
+          feedback: feedback
       });
     }
     else{
